Renamed variable, added comments and removed some methods

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /screen/screenshot2023.08.07.05.15.02.png
 /screen/screenshot2023.08.07.05.18.35.png
 /screen/screenshot2023.08.07.05.19.03.png
+/screen/screenshot2023.08.07.05.50.55.png
+/screen/screenshot2023.08.07.05.51.34.png
